--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 	flex: 1;
 	padding: 20px;
 	overflow: scroll;
+	font-family: "Roboto";
 }
 
 .zero-padding {
@@ -45,7 +46,7 @@ img {
 
 pre {
 	border-radius: 4px;
-	max-height: 500px;
+	max-height: 600px;
 }
 
 blockquote {
