--- a/src/App.css
+++ b/src/App.css
@@ -22,22 +22,25 @@
 .textarea-container {
 	flex: 1;
 	display: flex;
+	flex-direction: column;
 	border: none;
-	padding-left: 20px;
-	border-left: 3px solid rgb(216, 216, 216);
+	border-left: 1px solid rgb(216, 216, 216);
 }
 
 .textarea-container > textarea {
 	max-height: 100%;
 	z-index: 0;
 	flex: 1;
-	padding-right: 20px;
 	border: none;
 	resize: none;
 }
 
 .textarea-container > textarea:focus {
 	outline: none;
+}
+
+.text-area {
+	padding: 20px 20px 0;
 }
 
 img {
